fix toc at top and fix article overflow

--- a/_sass/hamilton/layout.scss
+++ b/_sass/hamilton/layout.scss
@@ -181,9 +181,7 @@
  */
 .site-body {
   display: grid;
-  border-right: 1px solid;
   grid-template-columns: calc(#{$content-width} * 0.24) 1fr;
-  overflow-x: hidden;
   
   @include media-query($on-medium) {
     grid-template-columns: calc(#{$content-width} * 0.18) 1fr;
@@ -199,7 +197,9 @@
  */
 .site-sidebar {
   padding: $spacing-unit;
-  border-right: 1px solid;
+  position: sticky;
+  top: 0;
+  align-self: start;
   @include relative-font-size(0.8);
 
   @include media-query($on-medium) {
@@ -322,7 +322,9 @@ ul.social-icons {
  */
 .site-main {
   flex: 1 0 auto;
-
+  min-width: 0;
+  border-left: 1px solid;
+  border-right: 1px solid;
   scrollbar-width: $scrollbar-width;     // Firefox
 
   padding-left: $spacing-unit;
